--- a/rtl/embedded/Makefile
+++ b/rtl/embedded/Makefile
@@ -432,6 +432,13 @@ ifeq ($(SUBARCH),avr6)
 CPU_UNITS=atmega2561 atmega2560 avrsim
 CPU_UNITS_DEFINED=1
 endif
+ifeq ($(SUBARCH),avrxmega3)
+CPU_UNITS=atmega808 atmega809 atmega1608 atmega1609 atmega3208 atmega3209 atmega4808 atmega4809 \
+          attiny202 attiny204 attiny212 attiny214 attiny402 attiny404 attiny406 attiny412 attiny414 \
+          attiny416 attiny416auto attiny417 attiny804 attiny806 attiny807 attiny814 attiny816 attiny817 \
+          attiny1604 attiny1606 attiny1607 attiny1614 attiny1616 attiny1617 attiny3214 attiny3216 attiny3217
+CPU_UNITS_DEFINED=1
+endif
 ifeq ($(CPU_UNITS_DEFINED),)
 $(error No CPUs enabled for given SUBARCH, pass either a SUBARCH or set CPU_UNITS_DEFINED=1 if you know what you are doing)
 endif
