* might_have_sideeffects takes care of absolute
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@44083 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -14198,6 +14198,8 @@ tests/test/tabsvr2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tabsvr3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tabsvr4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tabsvr5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tabsvr6.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tabsvr7.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/taddstr1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/taes1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/talign.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
