--- a/rtl/embedded/Makefile
+++ b/rtl/embedded/Makefile
@@ -394,49 +394,54 @@ CPU_UNITS=attiny26
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr25)
-CPU_UNITS=attiny44a attiny48 attiny84a attiny2313 attiny461 attiny43u \
-	  attiny24a attiny88 attiny861 attiny85 attiny24 \
-	  attiny87 attiny84 attiny13a attiny45 attiny828 attiny4313 attiny13 attiny261 \
-	  attiny861a attiny28 attiny44 attiny2313a attiny461a attiny261a attiny25
+CPU_UNITS=attiny13 attiny13a attiny24 attiny24a attiny25 attiny28 attiny43u \
+          attiny44 attiny44a attiny45 attiny48 attiny84a attiny84 attiny85 \
+          attiny87 attiny88 attiny261 attiny261a attiny461 attiny461a attiny828 \
+          attiny861 attiny861a attiny2313 attiny2313a attiny4313
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr35)
-CPU_UNITS=at90usb82 at90usb162 attiny167 atmega8u2 atmega16u2 atmega32u2 attiny1634
+CPU_UNITS=at90usb82 at90usb162 atmega8u2 atmega16u2 atmega32u2 attiny167 attiny1634
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr4)
-CPU_UNITS=atmega88p at90pwm3b atmega48a atmega48 atmega88a at90pwm81 atmega8 atmega8515 \
-	  atmega88pa atmega88 atmega48p atmega8535 at90pwm1 at90pwm2b atmega48pa ata6285 ata6286 \
-	  atmega8a
+CPU_UNITS=at90pwm1 at90pwm2b at90pwm3b at90pwm81 ata6285 ata6286 atmega8 \
+          atmega8a atmega48 atmega48a atmega48p atmega48pa atmega88 atmega88a \
+          atmega88p atmega88pa atmega8515 atmega8535
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr5)
-CPU_UNITS=atmega645 atmega165a atmega649a atmega32u4 atmega168p atmega3250pa atmega3290a \
-	  atmega165p atmega16u4 atmega6490p atmega324p atmega328 atmega64m1 atmega645p \
-	  atmega329a atmega324pa atmega32hvb at90pwm316 at90usb646 atmega16 atmega644 \
-	  at90can64 at90can32 at90pwm216 atmega3250a atmega3290pa atmega325p atmega328p \
-	  atmega3250 atmega329 atmega32a atmega6490 atmega168a atmega164pa atmega645a \
-	  atmega3290p atmega644p atmega164a atmega162 atmega32c1 atmega324a atmega169a \
-	  atmega644a atmega3290 atmega64a atmega169p atmega32 atmega168pa atmega16m1 \
-	  atmega16hvb atmega164p atmega325a atmega640 atmega6450 atmega329p at90usb647 \
-	  atmega168 atmega6490a atmega32m1 atmega64c1 atmega644pa atmega325pa atmega6450a \
-	  atmega329pa atmega6450p atmega64 atmega165pa atmega16a atmega649 atmega649p \
-	  atmega3250p atmega325 atmega169pa avrsim at90pwm161
+CPU_UNITS=avrsim at90can32 at90can64 at90pwm161 at90pwm216 at90pwm316 \
+          at90usb646 at90usb647 atmega16 atmega16a atmega16hvb atmega16m1 \
+          atmega16u4 atmega32 atmega32a atmega32c1 atmega32hvb atmega32m1 \
+          atmega32u4 atmega64 atmega64a atmega64c1 atmega64m1 atmega162 \
+          atmega164a atmega164p atmega164pa atmega165a atmega165p atmega165pa \
+          atmega168p atmega168pa atmega168 atmega168a atmega169a atmega169p \
+          atmega169pa atmega324a atmega324p atmega324pa atmega325 atmega325a \
+          atmega325p atmega325pa atmega328 atmega328p atmega329 atmega329a \
+          atmega329p atmega329pa atmega640 atmega644 atmega644a atmega644p \
+          atmega644pa atmega645 atmega645a atmega645p atmega649 atmega649a \
+          atmega649p atmega3250 atmega3250a atmega3250p atmega3250pa atmega3290 \
+          atmega3290a atmega3290p atmega3290pa atmega6450 atmega6450a \
+          atmega6450p atmega6490 atmega6490a atmega6490p
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr51)
-CPU_UNITS=at90usb1287 atmega1284 atmega1281 atmega128rfa1 atmega1284p at90can128 atmega128 at90usb1286 atmega128a atmega1280
+CPU_UNITS=at90can128 at90usb1286 at90usb1287 atmega128 atmega128a atmega128rfa1 \
+          atmega1280 atmega1281 atmega1284 atmega1284p
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr6)
-CPU_UNITS=atmega2561 atmega2560 avrsim
+CPU_UNITS=avrsim atmega2560 atmega2561
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avrxmega3)
-CPU_UNITS=atmega808 atmega809 atmega1608 atmega1609 atmega3208 atmega3209 atmega4808 atmega4809 \
-          attiny202 attiny204 attiny212 attiny214 attiny402 attiny404 attiny406 attiny412 attiny414 \
-          attiny416 attiny416auto attiny417 attiny804 attiny806 attiny807 attiny814 attiny816 attiny817 \
-          attiny1604 attiny1606 attiny1607 attiny1614 attiny1616 attiny1617 attiny3214 attiny3216 attiny3217
+CPU_UNITS=atmega808 atmega809 atmega1608 atmega1609 atmega3208 atmega3209 \
+          atmega4808 atmega4809 attiny202 attiny204 attiny212 attiny214 \
+          attiny402 attiny404 attiny406 attiny412 attiny414 attiny416 \
+          attiny416auto attiny417 attiny804 attiny806 attiny807 attiny814 \
+          attiny816 attiny817 attiny1604 attiny1606 attiny1607 attiny1614 \
+          attiny1616 attiny1617 attiny3214 attiny3216 attiny3217
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(CPU_UNITS_DEFINED),)
