--- a/rtl/embedded/Makefile
+++ b/rtl/embedded/Makefile
@@ -396,8 +396,8 @@ endif
 ifeq ($(SUBARCH),avr25)
 CPU_UNITS=attiny13 attiny13a attiny24 attiny24a attiny25 attiny28 attiny43u \
           attiny44 attiny44a attiny45 attiny48 attiny84a attiny84 attiny85 \
-          attiny87 attiny88 attiny261 attiny261a attiny461 attiny461a attiny828 \
-          attiny861 attiny861a attiny2313 attiny2313a attiny4313
+          attiny87 attiny88 attiny261 attiny261a attiny441 attiny461 attiny461a attiny828 \
+          attiny841 attiny861 attiny861a attiny2313 attiny2313a attiny4313
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr35)
@@ -406,33 +406,34 @@ CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr4)
 CPU_UNITS=at90pwm1 at90pwm2b at90pwm3b at90pwm81 ata6285 ata6286 atmega8 \
-          atmega8a atmega48 atmega48a atmega48p atmega48pa atmega48pb atmega88 atmega88a \
-          atmega88p atmega88pa atmega88pb atmega8515 atmega8535
+          atmega8a atmega8hva atmega48 atmega48a atmega48p atmega48pa \
+          atmega48pb atmega88 atmega88a atmega88p atmega88pa atmega88pb \
+          atmega8515 atmega8535
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr5)
 CPU_UNITS=avrsim at90can32 at90can64 at90pwm161 at90pwm216 at90pwm316 \
-          at90usb646 at90usb647 atmega16 atmega16a atmega16hvb atmega16m1 \
-          atmega16u4 atmega32 atmega32a atmega32c1 atmega32hvb atmega32m1 \
-          atmega32u4 atmega64 atmega64a atmega64c1 atmega64m1 atmega162 \
+          at90usb646 at90usb647 atmega16 atmega16a atmega16hva atmega16hvb atmega16hvbrevb atmega16m1 \
+          atmega16u4 atmega32 atmega32a atmega32c1 atmega32hvb atmega32hvbrevb atmega32m1 \
+          atmega32u4 atmega64 atmega64a atmega64c1 atmega64hve2 atmega64m1 atmega64rfr2 atmega162 \
           atmega164a atmega164p atmega164pa atmega165a atmega165p atmega165pa \
           atmega168 atmega168a atmega168p atmega168pa atmega168pb atmega169a atmega169p \
           atmega169pa atmega324a atmega324p atmega324pa atmega324pb atmega325 atmega325a \
           atmega325p atmega325pa atmega328 atmega328p atmega328pb atmega329 atmega329a \
-          atmega329p atmega329pa atmega640 atmega644 atmega644a atmega644p \
-          atmega644pa atmega645 atmega645a atmega645p atmega649 atmega649a \
+          atmega329p atmega329pa atmega406 atmega640 atmega644 atmega644a atmega644p \
+          atmega644pa atmega644rfr2 atmega645 atmega645a atmega645p atmega649 atmega649a \
           atmega649p atmega3250 atmega3250a atmega3250p atmega3250pa atmega3290 \
           atmega3290a atmega3290p atmega3290pa atmega6450 atmega6450a \
           atmega6450p atmega6490 atmega6490a atmega6490p
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr51)
-CPU_UNITS=at90can128 at90usb1286 at90usb1287 atmega128 atmega128a atmega128rfa1 \
-          atmega1280 atmega1281 atmega1284 atmega1284p
+CPU_UNITS=at90can128 at90usb1286 at90usb1287 atmega128 atmega128a atmega128rfa1 atmega128rfr2 \
+          atmega1280 atmega1281 atmega1284 atmega1284p atmega1284rfr2
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avr6)
-CPU_UNITS=avrsim atmega2560 atmega2561
+CPU_UNITS=avrsim atmega256rfr2 atmega2560 atmega2561 atmega2564rfr2
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(SUBARCH),avrxmega3)
@@ -441,7 +442,7 @@ CPU_UNITS=atmega808 atmega809 atmega1608 atmega1609 atmega3208 atmega3209 \
           attiny402 attiny404 attiny406 attiny412 attiny414 attiny416 \
           attiny416auto attiny417 attiny804 attiny806 attiny807 attiny814 \
           attiny816 attiny817 attiny1604 attiny1606 attiny1607 attiny1614 \
-          attiny1616 attiny1617 attiny3214 attiny3216 attiny3217
+          attiny1616 attiny1617 attiny1624 attiny1626 attiny1627 attiny3214 attiny3216 attiny3217
 CPU_UNITS_DEFINED=1
 endif
 ifeq ($(CPU_UNITS_DEFINED),)
