* AVR: attiny28 is an avr1 CPU
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@44132 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/rtl/embedded/Makefile.fpc
+++ b/rtl/embedded/Makefile.fpc
@@ -105,6 +105,10 @@ ifeq ($(SUBARCH),avrtiny)
 CPU_UNITS=attiny4 attiny5 attiny9 attiny10 attiny20 attiny40 attiny102 attiny104
 CPU_UNITS_DEFINED=1
 endif
+ifeq ($(SUBARCH),avr1)
+CPU_UNITS=attiny28
+CPU_UNITS_DEFINED=1
+endif
 ifeq ($(SUBARCH),avr2)
 CPU_UNITS=attiny26
 CPU_UNITS_DEFINED=1
