Add explicit dependency of AVR specific unit avrsim on consoleio and heapmgr units
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@44291 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/rtl/embedded/Makefile
+++ b/rtl/embedded/Makefile
@@ -2935,3 +2935,5 @@ intrinsics$(PPUEXT) : $(PROCINC)/intrinsics.pp $(SYSTEMUNIT)$(PPUEXT)
 	$(COMPILER) $(PROCINC)/intrinsics.pp
 sortbase$(PPUEXT) : $(INC)/sortbase.pp objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
 	$(COMPILER) $(INC)/sortbase.pp
+avrsim$(PPUEXT): $(ARCH)/avrsim.pp heapmgr$(PPUEXT) consoleio$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
+	$(COMPILER) $(ARCH)/avrsim.pp
