--- a/.gitattributes
+++ b/.gitattributes
@@ -915,6 +915,7 @@ compiler/utils/mkspreg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 compiler/utils/mkx86inl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/mkx86ins.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/mkx86reg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/utils/mkxtensareg.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/utils/msg2inc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/msgdif.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/msgused.pl svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -1012,6 +1013,16 @@ compiler/x86_64/x8664nop.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 compiler/x86_64/x8664op.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86_64/x8664pro.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86_64/x8664tab.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensacon.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensadwa.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensanor.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensanum.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensarni.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensasri.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensasta.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensastd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/rxtensasup.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/xtensareg.dat svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 /fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 /fpmake_add1.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 /fpmake_proc1.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
