+ Xtensa: initial skeleton completed   + xtensa-embedded support in the compiler
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@44318 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -1014,6 +1014,22 @@ compiler/x86_64/x8664nop.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 compiler/x86_64/x8664op.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86_64/x8664pro.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/x86_64/x8664tab.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/aasmcpu.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/agcpugas.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/aoptcpu.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/aoptcpub.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/cgcpu.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/cpubase.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/cpuinfo.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/cpunode.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/cpupara.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/cpupi.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/cputarg.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/hlcgcpu.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/itcpugas.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/racpugas.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/raxtensa.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/rgcpu.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/rxtensacon.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/xtensa/rxtensadwa.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/xtensa/rxtensanor.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -1023,6 +1039,9 @@ compiler/xtensa/rxtensasri.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=
 compiler/xtensa/rxtensasta.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/xtensa/rxtensastd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/xtensa/rxtensasup.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/symcpu.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/xtensaatt.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/xtensa/xtensaop.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/xtensa/xtensareg.dat svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 /fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 /fpmake_add1.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
