--- a/.gitattributes
+++ b/.gitattributes
@@ -12237,6 +12237,13 @@ rtl/x86_64/setjumph.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/x86_64/strings.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/x86_64/stringss.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/x86_64/x86_64.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/xtensa/cpuh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/xtensa/makefile.cpu svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/xtensa/math.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/xtensa/set.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/xtensa/setjump.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/xtensa/setjumph.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/xtensa/xtensa.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/bench/bansi1.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
