--- a/.gitattributes
+++ b/.gitattributes
@@ -1030,6 +1030,7 @@ compiler/xtensa/itcpugas.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=n
 compiler/xtensa/ncpuadd.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/ncpucnv.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/ncpumat.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+compiler/xtensa/ncpuutil.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/racpugas.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/raxtensa.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 compiler/xtensa/rgcpu.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
