--- a/.gitattributes
+++ b/.gitattributes
@@ -10839,6 +10839,7 @@ rtl/embedded/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/embedded/systhrd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/embedded/sysutils.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/embedded/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/embedded/xtensa/esp8266.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/emx/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/emx/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/emx/dos.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
